--- a/neo-app.json
+++ b/neo-app.json
@@ -1,101 +1,30 @@
 {
-  "welcomeFile": "/webapp/index.html",
+  "welcomeFile": "index.html",
   "routes": [
     {
       "path": "/sap/opu/odata",
       "target": {
         "type": "destination",
-        "name": "beyond_dg1",
+        "name": "GWD",
         "entryPath": "/sap/opu/odata"
       },
-      "description": "beyond_dg1"
+      "description": "GWD description"
     },
     {
       "path": "/sap/bc/ui5_ui5",
       "target": {
         "type": "destination",
-        "name": "beyond_dg1",
+        "name": "GWD",
         "entryPath": "/sap/bc/ui5_ui5"
       },
-      "description": "beyond_dg1"
-    },
-    {
-      "path": "/resources/sap/retail/store/lib/reuses1",
-      "target": {
-        "type": "destination",
-        "name": "beyond_dg1",
-        "entryPath": "/sap/bc/ui5_ui5/sap/rtst_reuses1",
-        "preferLocal": true
-      },
-      "description": "sap/retail/store/lib/reuses1 Reuse Library"
-    },
-    {
-      "path": "/webapp/resources/sap/retail/store/lib/reuses1",
-      "target": {
-        "type": "destination",
-        "name": "beyond_dg1",
-        "entryPath": "/sap/bc/ui5_ui5/sap/rtst_reuses1",
-        "preferLocal": true
-      },
-      "description": "sap/retail/store/lib/reuses1 Reuse Library"
-    },
-    {
-      "path": "/webapp/resources",
-      "target": {
-        "type": "service",
-        "name": "sapui5",
-        "entryPath": "/resources",
-        "version": "1.52.7"
-      },
-      "description": "SAPUI5 Resources"
-    },
-    {
-      "path": "/webapp/test-resources",
-      "target": {
-        "type": "service",
-        "name": "sapui5",
-        "entryPath": "/test-resources",
-        "version": "1.52.7"
-      },
-      "description": "SAPUI5 Test Resources"
-    },
-    {
-      "path": "/dist/resources/sap/retail/store/lib/reuses1",
-      "target": {
-        "type": "destination",
-        "name": "beyond_dg1",
-        "entryPath": "/sap/bc/ui5_ui5/sap/rtst_reuses1",
-        "preferLocal": true
-      },
-      "description": "sap/retail/store/lib/reuses1 Reuse Library"
-    },
-    {
-      "path": "/dist/resources",
-      "target": {
-        "type": "service",
-        "name": "sapui5",
-        "entryPath": "/resources",
-        "version": "1.52.7"
-      },
-      "description": "SAPUI5 Resources"
-    },
-    {
-      "path": "/dist/test-resources",
-      "target": {
-        "type": "service",
-        "name": "sapui5",
-        "entryPath": "/test-resources",
-        "version": "1.52.7"
-      },
-      "description": "SAPUI5 Test Resources"
+      "description": "GWD description"
     },
     {
       "path": "/resources",
       "target": {
         "type": "service",
         "name": "sapui5",
-        "entryPath": "/resources",
-        "version": "1.52.7"
+        "entryPath": "/resources"
       },
       "description": "SAPUI5 Resources"
     },
@@ -104,11 +33,29 @@
       "target": {
         "type": "service",
         "name": "sapui5",
-        "entryPath": "/test-resources",
-        "version": "1.52.7"
+        "entryPath": "/test-resources"
       },
       "description": "SAPUI5 Test Resources"
+    },
+    {
+      "path": "/resources/retail/store/productlookups1",
+      "target": {
+        "type": "destination",
+        "name": "GWD",
+        "entryPath": "/sap/bc/ui5_ui5/sap/rt_prod_lkps1",
+        "preferLocal": true
+      },
+      "description": "retail/store/productlookups1 Reuse Library"
+    },
+    {
+      "path": "/resources/sap/retail/store/lib/reuses1",
+      "target": {
+        "type": "destination",
+        "name": "GWD",
+        "entryPath": "/sap/bc/ui5_ui5/sap/rtst_reuses1",
+        "preferLocal": true
+      },
+      "description": "sap/retail/store/lib/reuses1 Reuse Library"
     }
-  ],
-  "sendWelcomeFileRedirect": true
+  ]
 }
